chore: 인터넷 권한, 오디오 라이브러리 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,4 @@ rootProject.name = "SmartCounselor"
 include ':app'
 include ':resources'
 include ':sognora_extension'
+include ':sognora_websocket_audio'
